crates/xlate/tests/snapshots/golden_matrix__chat__output_strict_unsupported_keywords__gpt-4o-mini__20260910__chat_to_responses__gpt6.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-6-astra",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "Give a 3-letter code."
        }
      ]
    }
  ],
  "text": {
    "format": {
      "type": "json_schema",
      "name": "code",
      "schema": {
        "additionalProperties": false,
        "properties": {
          "code": {
            "type": "string"
          }
        },
        "required": [
          "code"
        ],
        "type": "object"
      },
      "strict": true
    }
  },
  "max_output_tokens": 128
}
--- headers ---
content-type: application/json
upstream_streams: false
--- degraded ---
output.schema=rewritten
